--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,8 @@ body {
 
 	border-radius: .2rem;
 	transition:
-		background .3s ease-in-out;
+		background .3s ease-in-out,
+		color .3s ease-in-out;
 
 	position: relative;
 }
@@ -66,12 +67,14 @@ body {
 	vertical-align: top;
 	font-size: .9375rem;
 	line-height: 1.5rem;
+	margin: 0 .25rem;
 }
 
 .ptr-button {
 	background: rgba(125,125,125,.3);
 	color: #222;
 	border: 1px solid rgba(0,0,0,.02);
+	padding: calc(.25rem - 1px) .25rem;
 	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
 }
 .ptr-button:hover {
@@ -81,20 +84,20 @@ body {
 
 .ptr-button.primary {
 	background: rgb(153, 54, 75);
-	color: #ccc;
+	color: #ddd;
 }
 .ptr-button.primary:hover {
 	background: rgb(122, 37, 55);
-	color: #e2e2e2;
+	color: #eee;
 }
 
 .ptr-button.secondary {
 	background: rgb(65, 69, 81);
-	color: #ccc;
+	color: #ddd;
 }
 .ptr-button.secondary:hover {
 	background: rgb(33, 38, 53);
-	color: #e2e2e2;
+	color: #eee;
 }
 
 .ptr-button > .ptr-icon {
@@ -104,6 +107,21 @@ body {
 	margin: .125rem .25rem;
 }
 
+.ptr-button.circular {
+	width: 2.25rem;
+	height: 2.25rem;
+	border-radius: 50%;
+	padding: calc(.5rem - 1px);
+	position: relative;
+	top: -.125rem;
+	left: -.125rem;
+}
+.ptr-button.circular > .ptr-icon {
+	margin: 0;
+}
+.ptr-button.circular:focus::after {
+	border-radius: 50%;
+}
 
 /* == UI Select =================================================== */
 
