--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,12 @@ body {
 	color: #eee;
 }
 
+.ptr-button.invisible {
+	background: transparent;
+	border-color: transparent;
+	box-shadow: none;
+}
+
 .ptr-button > .ptr-icon {
 	display: inline-block;
 	width: 1.25rem;
