--- a/src/components/presentation/controls/scenarios/SceanrioCard/ScenarioCard.css
+++ b/src/components/presentation/controls/scenarios/SceanrioCard/ScenarioCard.css
@@ -11,6 +11,10 @@
 	display: flex;
 	align-items: center;
 }
+.scenario-card-header > label {
+	flex: 1 1;
+	display: flex;
+}
 .scenario-card-header-checkbox {
 	width: 2rem;
 	display: flex;
