CaseDetail & ScenarioCard: EditableText

--- a/src/components/presentation/atoms/EditableText/style.css
+++ b/src/components/presentation/atoms/EditableText/style.css
@@ -10,6 +10,7 @@
 	width: 100%;
 }
 
-textarea.ptr-editable-text:focus {
+textarea.ptr-editable-text:focus,
+textarea.ptr-editable-text.empty {
 	border: 1px dashed rgba(0,0,0,.5);
 }
