--- a/src/components/presentation/atoms/EditableText/style.css
+++ b/src/components/presentation/atoms/EditableText/style.css
@@ -14,3 +14,7 @@ textarea.ptr-editable-text:focus,
 textarea.ptr-editable-text.empty {
 	border: 1px dashed rgba(0,0,0,.5);
 }
+
+.ptr-editable-text.large {
+	font-size: 1.25rem;
+}
