Remove __new Use better version of ExtJS

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -386,7 +386,7 @@
 }
 
 .x-tool-hide {
-	background-image: url("../__new/img/minimise-icon-dark.png") !important;
+	background-image: url("../img/minimise-icon-dark.png") !important;
 }
 
 .x-tool-poweron {
