--- a/src/components/presentation/controls/scenarios/SceanrioCard/ScenarioCard.css
+++ b/src/components/presentation/controls/scenarios/SceanrioCard/ScenarioCard.css
@@ -10,6 +10,10 @@
 .scenario-card-header {
 	display: flex;
 	align-items: center;
+	transition: background .3s ease-in-out;
+}
+.scenario-card-header.editing-inactive:hover {
+	background: rgba(225,227,229,1);
 }
 .scenario-card-header > label {
 	flex: 1 1;
