EditableText: add option to highlight external editing state

--- a/src/components/presentation/atoms/EditableText/style.css
+++ b/src/components/presentation/atoms/EditableText/style.css
@@ -11,7 +11,8 @@
 }
 
 textarea.ptr-editable-text:focus,
-textarea.ptr-editable-text.empty {
+textarea.ptr-editable-text.empty,
+textarea.ptr-editable-text.editing {
 	border: 1px dashed rgba(0,0,0,.5);
 }
 
