Scenario map controls

--- a/src/view/worldWind/controls/Controls.css
+++ b/src/view/worldWind/controls/Controls.css
@@ -6,14 +6,20 @@
 	margin-bottom: 7px;
 }
 
-#map-controls {
+.map-controls {
 	position: absolute;
 	bottom: 20px;
 	right: 7px;
 	z-index: 3;
 }
+.map-controls.small {
+	bottom: 13px;
+}
+.map-controls.small .control {
+	margin-bottom: 5px;
+}
 
-#map-controls .control > a,
+.map-controls .control > a,
 .menu-control > a {
 	display: block;
 	width: 2rem;
@@ -28,21 +34,27 @@
 			background .2s ease-in-out;
 }
 
+.map-controls.small .control > a {
+	width: 1.6rem;
+	height: 1.6rem;
+	font-size: .975rem;
+}
+
 .menu-control > a {
 	border-radius: .3rem;
 }
 
-#map-controls .control > a:not(:first-child) {
+.map-controls .control > a:not(:first-child) {
 	border-top: 1px solid rgba(0, 0, 0, .1);
 }
 
-#map-controls .control > a:hover,
+.map-controls .control > a:hover,
 .menu-control > a:hover {
 	background-color: rgba(255, 255, 255, .5);
 	color: #c92d42;
 }
 
-#rotate-needle-control i {
+.rotate-needle-control i {
 	/*transition: all .2s ease-in-out;*/
 	-webkit-transform: rotate(-45deg);
 	transform: rotate(-45deg);
@@ -59,22 +71,22 @@
 	background-repeat: no-repeat;
 }
 
-#tilt-more-control svg,
-#tilt-less-control svg {
+.tilt-more-control svg,
+.tilt-less-control svg {
 	margin-top: .21rem;
 	width: 1.125rem;
 	height: 1.125rem;
 }
 
-#tilt-more-control svg path,
-#tilt-less-control svg path {
+.tilt-more-control svg path,
+.tilt-less-control svg path {
 	fill: #666;
 
 	transition:
 			fill .2s ease-in-out;
 }
 
-#tilt-more-control:hover svg path,
-#tilt-less-control:hover svg path {
+.tilt-more-control:hover svg path,
+.tilt-less-control:hover svg path {
 	fill: #c92d42;
 }
