Don't render unnecessary parts of Scenario card and Case detail

--- a/src/components/presentation/controls/scenarios/ScenarioCard/ScenarioCard.css
+++ b/src/components/presentation/controls/scenarios/ScenarioCard/ScenarioCard.css
@@ -32,7 +32,7 @@
 	padding: 0 .3rem;
 }
 .scenario-card-body {
-	padding: .7rem;
+	padding: 0 .7rem .7rem;
 	/*border-top: 1px dashed #aaa;*/
 }
 .scenario-card-body-buttons {
