--- a/src/components/presentation/controls/scenarios/CaseList/CaseList.css
+++ b/src/components/presentation/controls/scenarios/CaseList/CaseList.css
@@ -13,9 +13,15 @@
 	border-radius: 2px;
 	cursor: pointer;
 	margin-bottom: .5rem;
-	max-width: 40rem;
-	padding: .5rem .5rem 1rem;
+	padding: .5rem;
 	transition: box-shadow .3s ease-in-out, border-color .3s ease-in-out;
+	width: 100%;
+}
+.case-list-item.unsaved-editing {
+	border-color: rgba(153,54,75,.7);
+}
+.case-list-item.unsaved-editing:hover {
+	border-color: rgba(153,54,75,.85);
 }
 .case-list-item:hover {
 	border-color: #bbb;
@@ -27,10 +33,24 @@
 	font-weight: 400;
 	margin-bottom: .2rem;
 }
-.case-list-item > span {
-	font-size: .9rem;
-	color: rgb(128,132,140);
+.case-list-item-footer {
+	margin-top: .5rem;
+	display: flex;
+}
+.case-list-item-footer > span {
+	text-transform: uppercase;
+	font-size: .8rem;
 	font-weight: 400;
+}
+.case-list-item-footer-scenarios {
+	flex: 1;
+	color: rgb(85,89,101);
+}
+.case-list-item-footer-editing {
+	color: transparent;
+}
+.case-list-item.unsaved-editing .case-list-item-footer-editing {
+	color: rgba(153,54,75,1);
 }
 
 .ptr-button#ptr-case-list-add-case-button {
