--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -807,6 +807,10 @@ body.mode-3d #top-toolbar-3dmap.disabled:not(.world-wind-2d) span {
 	content: '\f085';
 }
 
+#top-toolbar .item#top-toolbar-scenarios::before {
+	content: '\f0e8';
+}
+
 
 /* Sidebar tools */
 #sidebar-tools {
