--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,9 @@ body {
 .ptr-button:not(.disabled) {
 	cursor: pointer;
 }
+.ptr-button.disabled {
+	pointer-events: none;
+}
 
 .ptr-button:focus::after {
 	content: ' ';
@@ -76,6 +79,11 @@ body {
 	border: 1px solid rgba(0,0,0,.02);
 	padding: calc(.25rem - 1px) .25rem;
 	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
+}
+.ptr-button.disabled,
+.ptr-button.primary.disabled {
+	background: rgba(125,125,125,.2);
+	color: #888;
 }
 .ptr-button:hover {
 	background: rgba(125,125,125,.4);
