--- a/src/view/mapsContainer/MapsContainer.css
+++ b/src/view/mapsContainer/MapsContainer.css
@@ -34,12 +34,8 @@ body.mode-3d .maps-container {
 	display: block;
 }
 .maps-container .map-tools {
-	width: 0;
-	height: 100%;
+	display: flex;
 	z-index: 1;
-}
-.maps-container.tools-active .map-tools {
-	width: 35px;
 }
 .maps-container .map-fields {
 	flex: 1;
