--- a/src/view/widgets/MapToolsWidget/MapToolsWidget.css
+++ b/src/view/widgets/MapToolsWidget/MapToolsWidget.css
@@ -43,6 +43,7 @@
 	overflow: hidden;
 	border-radius: 0;
 	resize: none;
+	position: relative;
 }
 #floater-map-tools-widget.pinned .floater-header {
 	height: 1.5rem;
