--- a/src/view/widgets/Widget.css
+++ b/src/view/widgets/Widget.css
@@ -174,6 +174,21 @@
     font-size: 1.05rem;
 }
 
+.floater-tool svg {
+    height: 1.25rem;
+    width: 1.25rem;
+}
+.floater-tool svg .polygon {
+    stroke: #eee;
+    fill: transparent;
+}
+.floater-tool svg .line {
+    stroke: #eee;
+    fill: #eee;
+}
+
+
+
 /* floater body */
 .floater-body {
     padding: .5rem;
