--- a/src/view/widgets/Widget.css
+++ b/src/view/widgets/Widget.css
@@ -306,15 +306,28 @@ body.mode-3d .floater.only-3d.open {
     transform: rotate(30deg);
 }
 .floater.pinned {
+    background: white;
     box-shadow: none;
     border-right: 1px solid rgba(186,190,200,1);
+    max-height: none;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 0;
+    resize: none;
+    position: relative;
+}
+.floater.pinned .floater-header {
+    background: rgba(153,54,75,.9);
+    height: 2rem;
+    line-height: 2.1rem;
+}
+.floater.pinned .floater-tool {
+    width: 1.7rem;
 }
 .floater.pinned .widget-detach {
     display: flex;
 }
-.floater.pinned .widget-pin,
-.floater.pinned .widget-minimise,
-.floater.pinned .floater-header-title {
+.floater.pinned .widget-pin {
     display: none;
 }
 
