Hide the old interface part during the load.

--- a/public/css/newDesign.css
+++ b/public/css/newDesign.css
@@ -769,7 +769,7 @@
 ======================================================== */
 
 .newDesign body {
-	background: rgb(163, 205, 255);
+	background: #f4f3ef;
 }
 
 /* Header === */
