--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
+  background: #f4f3ef;
 }
 
 /* ================================================================
