- scenario card input file - accept zip only - removing scenarios from case - added edit to scenario menu for switching on of case editing

--- a/src/components/presentation/controls/scenarios/ScenarioCard/ScenarioCard.css
+++ b/src/components/presentation/controls/scenarios/ScenarioCard/ScenarioCard.css
@@ -7,6 +7,9 @@
 	position: relative;
 	transition: box-shadow .3s ease-in-out, border-color .3s ease-in-out;
 }
+.scenario-card.edited {
+	background: #edc;
+}
 .scenario-card-overlay {
 	position: absolute;
 	left: 0;
