--- a/src/components/presentation/controls/mapEditing/controlPanels/MapEditingControlPanel/MapEditingControlPanel.css
+++ b/src/components/presentation/controls/mapEditing/controlPanels/MapEditingControlPanel/MapEditingControlPanel.css
@@ -4,6 +4,8 @@
 	background: white;
 	box-shadow: 0 0 4px rgb(136, 136, 136);
 	z-index: 1;
+	display: flex;
+	flex-direction: column;
 }
 
 .ptr-editing-control-panel-title {
@@ -13,8 +15,16 @@
 	font-weight: 400;
 }
 .ptr-editing-control-panel-content {
+	flex: 1;
 }
 .ptr-editing-control-panel-content-header {
 	background: rgba(224,227,231,1);
 	padding: 2rem 1.5rem;
+}
+.ptr-editing-control-panel-controls {
+	padding: 2rem 1.5rem;
+	background: #efc6cf;
+}
+.ptr-editing-control-panel-buttons > .ptr-button {
+	margin: 0 .5rem 0 0;
 }
