--- a/src/components/presentation/controls/mapEditing/controlPanels/MapEditingControlPanel/MapEditingControlPanel.css
+++ b/src/components/presentation/controls/mapEditing/controlPanels/MapEditingControlPanel/MapEditingControlPanel.css
@@ -22,7 +22,7 @@
 	padding: 2rem 1.5rem;
 }
 .ptr-editing-control-panel-controls {
-	padding: 2rem 1.5rem;
+	padding: 1rem 1.5rem 1.5rem;
 	background: #efc6cf;
 }
 .ptr-editing-control-panel-buttons > .ptr-button {
